[package]
name = "uttt-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.3", features = ["js"] }
sycamore = { git = "https://github.com/sycamore-rs/sycamore", rev = "df16d18" }
uttt-rs = { path = "./uttt-rs" }
