[package]
name = "uttt-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.6", features = ["js"] }
gloo-timers = { version = "0.2.4", features = ["futures"] }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
sycamore = { version = "0.9.1", features = ["suspense"] }
uttt-rs = { path = "./uttt-rs" }

[workspace]
members = ["uttt-rs"]

[profile.release-debug]
debug = true
inherits = "release"
